Prevented opt out text getting cut off on mobile

--- a/client/scss/components/_new-site-notice.scss
+++ b/client/scss/components/_new-site-notice.scss
@@ -36,17 +36,9 @@ $mega-w-size: 400px;
   margin-right: 1rem;
 }
 
-.new-site-notice__text {
-  flex-grow: 1;
-}
-
 .new-site-notice__device-ico {
   min-width: 26px;
   margin-right: 1em;
-}
-
-.new-site-notice__ctas {
-  white-space: nowrap;
 }
 
 .new-site-notice__cta {
